--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -182,6 +182,11 @@ body {
     justify-items: center;
   }
 
+  .props__item {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__item {
     display: flex;
     width: 100%;
